# ics-isaac-sas

./: .env.ics-is.template  .gitignore  .gitmodules  .ics-is.template.env  Dockerfile  Makefile  README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  requirements.txt  worker.Dockerfile
.run/: All in api.run.xml  CS API.run.xml  Debug Server.run.xml  Training.run.xml  generate code.run.xml  generate endpoints.run.xml  test ics-worker.run.xml  test native api.run.xml  uvicorn.run.xml
ics/: pyproject.toml
ics/ics/: api.py  implementation.py  isaac_sas.py  models.py  worker.py
specs/: api.http
specs/coding-service-implementation/: api.yaml
src/: api.py  ics.py  isaac_sas.py  main.py  models.py  worker.py
src/apis/: default_api.py  default_api_base.py  native_api.py
src/controller/: coders.py  info.py  tasks.py
src/features/: data.py  extractor.py  feature_groups.py  requirements.txt  testing.py  util.py
src/isaac_sas/: controller.py  core.py  functions.py  instructions.py  instructions_train.py  models.py
src/models/: chunk_type.py  code.py  data_chunk.py  response.py  response_value.py  service_info.py  service_info_instructions_schema.py  service_info_task_types.py  task.py  task_action.py  task_events_inner.py  task_instructions.py  task_seed.py  task_type.py  task_type_info.py  task_type_info_instructions_schema.py  task_update.py  tasks_put_request.py  tasks_task_id_data_put200_response.py  tasks_task_id_patch_request.py  train.py
src/tasks/: tasks.py
test/: Response.py  response_value_test.py
(+20 files in other folders)
